--- a/conteúdo/Projeto Interdisciplinar/paginas/variações_navbar/categoria-de-livros.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/variações_navbar/categoria-de-livros.css
@@ -116,7 +116,7 @@ section h1 {
     font-weight: bold;
     color: var(--azul-700);
     width: 1920px;
-    margin-bottom: 20px;
+    margin-bottom: 0;
     margin-left: 110px;
 }
 
@@ -128,6 +128,7 @@ section h2 {
     width: 1500px;
     margin-bottom: 25px;
     margin-left: 110px;
+
 }
 
 section li {
