--- a/conteúdo/Projeto Interdisciplinar/paginas/variações_navbar/perguntas-frequentes.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/variações_navbar/perguntas-frequentes.css
@@ -126,7 +126,7 @@ section h2 {
     font-weight: 600;
     color: var(--azul-600);
     width: 1500px;
-    margin-bottom: 25px;
+    margin-bottom: 49px;
     margin-left: 110px;
 
 }
@@ -137,11 +137,21 @@ section li {
     font-weight: normal;
     color: var(--azul-400);
     width: 1390px;
-    margin-bottom: 20px;
+    margin-bottom: 6px;
     text-decoration: underline;
     text-underline-offset: 4px;
 }
 
 section ol {
     margin-left: 135px;
+}
+
+section p {
+    font-family: 'Inter', serif;
+    font-size: 20px;
+    font-weight: normal;
+    color: var(--azul-700);
+    width: 1345px;
+    margin-bottom: 40px;
+    margin-left: 110px;
 }
