Finalização da tela  de solicitação de troca

--- a/conteúdo/Projeto Interdisciplinar/paginas/chat_batepapo/chat_batepapo.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/chat_batepapo/chat_batepapo.css
@@ -128,9 +128,10 @@ img {
     margin: 10px 10px;
 }
 
-#section2 > .usuarios:hover {
+#section2 > #pagina-exemplo-hover {
     background-color: var(--azul-500);
     border-radius: 20px;
+    height: 120px;
 }
 
 #section2 div > h3 {
