--- a/conteúdo/Projeto Interdisciplinar/paginas/fazer_login/fazer_login.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/fazer_login/fazer_login.css
@@ -44,12 +44,14 @@ header h1 {
     border-radius: 50px;
     outline: none;
     padding: 16px;
+    padding-top: 20px;
     font-family: 'Poppins', monospace;
 }
 
 header .barra-de-pesquisa > input::placeholder  {
     color: var(--azul-400);
-    font-family: 'Poppins', monospace;
+    font-family: 'Inter', serif;
+    font-size: 20px;
 }
 
 header .barra-de-pesquisa img {
