--- a/conteúdo/Projeto Interdisciplinar/paginas/variações_navbar/categoria-de-livros.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/variações_navbar/categoria-de-livros.css
@@ -24,7 +24,7 @@ header h1 {
 .barra-de-pesquisa {
     display: flex;
     align-items: center;
-    padding: 0 16px 0 16px;
+    padding: 5px 16px 0 16px;
     background-color: var(--azul-100);
     border-radius: 50px;
     box-shadow: 0px 1.5px 4px rgb(0, 0, 0, 0.6); 
@@ -50,7 +50,8 @@ header h1 {
 
 header .barra-de-pesquisa > input::placeholder  {
     color: var(--azul-400);
-    font-family: 'Poppins', monospace;
+    font-family: 'Inter', serif;
+    font-size: 20px;
 }
 
 header .barra-de-pesquisa img {
