--- a/conteúdo/Projeto Interdisciplinar/style.css
+++ b/conteúdo/Projeto Interdisciplinar/style.css
@@ -45,6 +45,7 @@ header h1 {
     border-radius: 50px;
     outline: none;
     padding: 16px;
+    padding-top: 20px;
     font-family: 'Poppins', monospace;
 }
 
@@ -105,6 +106,11 @@ nav p {
 
 main {
     display: flex;
+}
+
+section {
+    display: flex;
+    flex-wrap: wrap;
     margin: 90px 0 0 110px
 }
 
@@ -116,10 +122,21 @@ main section > h2 {
     color: var(--azul-400);
 }
 
+main section > h3 {
+    font-family: 'Poppins', monospace;
+    font-size: 28px;
+    font-weight: 500;
+    color: var(--azul-400);
+    width: 1300px;
+    text-decoration: underline;
+    margin: 7.5px 0 45px 20px;
+}
+
 .livros {
     display: flex;
+    justify-content: center;
     justify-content: space-between;
-    width: 1550px;
+    width: 1700px;
 }
 
 .livros > div {
