--- a/conteúdo/Projeto Interdisciplinar/paginas/variações_especificaçõesl_ivros/a_arte.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/variações_especificaçõesl_ivros/a_arte.css
@@ -64,6 +64,129 @@ header .barra-de-pesquisa img {
     align-items: center;
     gap: 16px;
 }
+
 img {
     cursor: pointer;
+}
+
+#section1 {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    width: 701px;
+    height: 875px;
+    margin-top: 37px;
+    margin-left: 168px;
+    font-family: 'Poppins', monospace;
+}
+
+#section1 h1 {
+    font-size: 48px;
+    color: var(--azul-700);
+    font-weight: bold;
+    width: 100%;
+    height: 50px;
+}
+
+#section1 h2 {
+    font-size: 36px;
+    color: var(--azul-700);
+    font-weight: 600;
+    width: 100%;
+    height: 40px;
+}
+
+#section1 h3 {
+    font-size: 28px;
+    color: var(--azul-700);
+    font-weight: 500;
+    width: 600px;
+    height: 85px;
+}
+
+#section1 hr {
+    margin: 0 0;
+    width: 700px;
+    height: 0px;
+    border: solid 1px black;
+}
+
+section form div > input {
+    width: 100%;
+    height: 50px;
+    padding-left: 12px;
+    padding-top: 5px;
+    border: solid 1px black;
+}
+
+#largura-form-gap {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    row-gap: 20px;
+}
+
+.div-input {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 700px;    
+}
+
+form .div-input > .tres-input {
+    width: 195px;
+    height: 50px;
+}
+
+form .div-input > .dois-input {
+    width: 285px;
+    height: 50px;
+}
+
+button {
+    margin-left: auto;
+    margin-right: auto;
+    width: 150px;
+    height: 45px;
+    font-family: 'Inter', serif;
+    font-size: 20px;
+    font-weight: normal;
+    color: var(--branco);
+    background-color: var(--azul-500);
+    border: none;
+    border-radius: 4px;
+}
+
+form input::placeholder {
+    color: var(--azul-400);
+    font-family: 'Inter', serif;
+    font-size: 20px;
+    font-weight: normal;
+}
+
+main {
+    display: flex;
+}
+
+#section2 div {
+    width: 660px;
+    height: 860px;
+    box-shadow: 0 0 8px rgb(0, 0, 0, 0.25);
+}
+
+#section2 {
+    display: flex;
+}
+
+#section2 div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 45px;
+    margin-left: 220px;
+}
+
+#section2 img {
+    width: 482px;
+    height: 722px;
 }
