--- a/conteúdo/Projeto Interdisciplinar/paginas/cadastro/cadastro.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/cadastro/cadastro.css
@@ -29,7 +29,7 @@ header h1 {
 .barra-de-pesquisa {
     display: flex;
     align-items: center;
-    padding: 5px 16px 0 16px;
+    padding: 0 16px 0 16px;
     background-color: var(--azul-100);
     border-radius: 50px;
     box-shadow: 0px 1.5px 4px rgb(0, 0, 0, 0.6); 
