--- a/conteúdo/Projeto Interdisciplinar/paginas/cadastro_livros/cadastro_livros.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/cadastro_livros/cadastro_livros.css
@@ -1,6 +1,8 @@
 header {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
+    justify-content: space-between;
     background-color: var(--azul-700);
     width: 100%;
     height: 125px;
@@ -8,6 +10,9 @@ header {
 
 }
 
+#img-perfil {
+    margin-right: 50px;
+}
 img {
     cursor: pointer;
 }
@@ -68,6 +73,24 @@ header .barra-de-pesquisa img {
     height: 24px;
 }
 
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 50px;
+    background-color: var(--azul-100);
+    gap: 55px;
+    margin-top: 10px;
+    text-underline-offset: 16.5px;
+}
+
+nav p {
+    font-family: 'Inter';
+    font-size: 20px;
+    color: var(--azul-400);
+}
+
 section {
     display: flex;
     flex-wrap: wrap;
@@ -85,7 +108,7 @@ section > h1 {
     font-weight: bold;
     font-family: 'Poppins';
     font-size: 48px;
-    margin: 25px 0 15px 110px;
+    margin: 45px 0 0 110px;
     width: 100%;
 }
 
@@ -95,7 +118,7 @@ form > h2 {
     font-weight: 600;
     font-family: 'Poppins';
     font-size: 36px;
-    margin: 0 0 0 110px;
+    margin: 0 0 -20px 110px;
     width: 100%;
 }
 
