--- a/conteúdo/Projeto Interdisciplinar/paginas/chat_batepapo/chat_batepapo.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/chat_batepapo/chat_batepapo.css
@@ -2,13 +2,23 @@ header {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: space-between;
     background-color: var(--azul-700);
     width: 100%;
     height: 125px;
-    font-family: 'Poppins', monospace;
+    font-family: 'Poppins';
+
 }
 
-header img {
+#img-perfil {
+    margin-right: 50px;
+}
+
+img {
+    cursor: pointer;
+}
+
+header #logo {
     width: 102px;
     height: 100px;
     margin-left: 110px;
@@ -20,15 +30,20 @@ header h1 {
     color: var(--branco);
 }
 
+.logo {
+    display: flex;
+    align-items: center;
+    gap: 14px;
+}
+
 .barra-de-pesquisa {
     display: flex;
     align-items: center;
-    padding: 0 16px 0 16px;
     background-color: var(--azul-100);
+    padding: 5px 16px 0 16px;
+    margin-left: 222px;
     border-radius: 50px;
     box-shadow: 0px 1.5px 4px rgb(0, 0, 0, 0.6); 
-    margin-left: 200px;
-
 }
 
 .barra-de-pesquisa > img:hover {
@@ -39,13 +54,12 @@ header h1 {
     display: flex;
     align-items: center;
     background-color: var(--azul-100);
-    width: 850px;
+    width: 800px;
     height: 55px;
     border: none;
     border-radius: 50px;
     outline: none;
     padding: 16px;
-    padding-top: 20px;
     font-family: 'Poppins', monospace;
 }
 
@@ -60,11 +74,6 @@ header .barra-de-pesquisa img {
     height: 24px;
 }
 
-.logo {
-    display: flex;
-    align-items: center;
-    gap: 16px;
-}
 img {
     cursor: pointer;
 }
