--- a/conteúdo/Projeto Interdisciplinar/paginas/livros_disponiveis/livros_disponiveis.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/livros_disponiveis/livros_disponiveis.css
@@ -2,6 +2,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: space-between;
     background-color: var(--azul-700);
     width: 100%;
     height: 125px;
@@ -59,6 +60,12 @@ header .barra-de-pesquisa > input::placeholder  {
 header .barra-de-pesquisa img {
     width: 24px;
     height: 24px;
+}
+
+#img-perfil {
+    margin-right: 50px;
+    width: 64px;
+    height: 64px;
 }
 
 .logo {
