--- a/conteúdo/Projeto Interdisciplinar/paginas/variações_solicitações_de_troca/deus_pai.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/variações_solicitações_de_troca/deus_pai.css
@@ -2,6 +2,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: space-between;
     background-color: var(--azul-700);
     width: 100%;
     height: 125px;
@@ -63,6 +64,12 @@ header .barra-de-pesquisa img {
     display: flex;
     align-items: center;
     gap: 16px;
+}
+
+#img-perfil {
+    margin-right: 50px;
+    width: 64px;
+    height: 64px;
 }
 
 img {
