--- a/conteúdo/Projeto Interdisciplinar/paginas/variações_solicitações_de_troca/deus_pai.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/variações_solicitações_de_troca/deus_pai.css
@@ -66,12 +66,11 @@ header .barra-de-pesquisa img {
     gap: 16px;
 }
 
-#img-perfil {
-    margin-right: 50px;
+#img-perfil-usuario {
     width: 64px;
     height: 64px;
+    margin-right: 50px;
 }
-
 img {
     cursor: pointer;
 }
