--- a/conteúdo/Projeto Interdisciplinar/paginas/variações_solicitações_de_troca/pijama_listrado.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/variações_solicitações_de_troca/pijama_listrado.css
@@ -66,10 +66,10 @@ header .barra-de-pesquisa img {
     gap: 16px;
 }
 
-#img-perfil {
-    margin-right: 50px;
+#img-perfil-usuario {
     width: 64px;
     height: 64px;
+    margin-right: 50px;
 }
 
 img {
