--- a/conteúdo/Projeto Interdisciplinar/paginas/pagina_inicial/index_cadastrado.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/pagina_inicial/index_cadastrado.css
@@ -130,7 +130,7 @@ main section > h2 {
     color: var(--azul-400);
 }
 
-main section > h3 {
+main section h3 {
     font-family: 'Poppins', monospace;
     font-size: 28px;
     font-weight: 500;
@@ -158,7 +158,7 @@ main section > h3 {
     height: 370px;
 }
 
-.livros div > button {
+#button {
     background-color: var(--azul-500);
     color: var(--branco);
     width: 222px;
@@ -169,4 +169,14 @@ main section > h3 {
     border-radius: 3.5px;
     margin-top: 24px;
     margin-bottom: 50px;
+}
+
+button {
+    background-color: var(--azul-500);
+    color: var(--branco);
+    width: 222px;
+    height: 41px;
+    font-family: 'Poppins', monospace;
+    font-size: 20px;
+    border: none;
 }
