--- a/conteúdo/Projeto Interdisciplinar/paginas/perfil_usuario/perfil_usuario.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/perfil_usuario/perfil_usuario.css
@@ -36,7 +36,7 @@
     color: var(--azul-600);
 }
 
-#section2 h3 {
+#section2 a h3 {
     font-family: 'Poppins', monospace;
     font-size: 28px;
     font-weight: 500;
