--- a/conteúdo/Projeto Interdisciplinar/style.css
+++ b/conteúdo/Projeto Interdisciplinar/style.css
@@ -123,7 +123,7 @@ main section > h2 {
     color: var(--azul-400);
 }
 
-main section > h3 {
+main section h3 {
     font-family: 'Poppins', monospace;
     font-size: 28px;
     font-weight: 500;
@@ -151,15 +151,24 @@ main section > h3 {
     height: 370px;
 }
 
-.livros div > button {
+#button {
     background-color: var(--azul-500);
     color: var(--branco);
     width: 222px;
     height: 41px;
     font-family: 'Poppins', monospace;
     font-size: 20px;
-    border: none;
     border-radius: 3.5px;
     margin-top: 24px;
     margin-bottom: 50px;
+}
+
+.livros div button {
+    border: none;
+    width: 100%;
+    height: 100%;
+    background-color: var(--azul-500);
+    color: var(--branco);   
+    font-family: 'Poppins', monospace;
+    font-size: 20px;
 }
