--- a/conteúdo/Projeto Interdisciplinar/paginas/variações_solicitações_de_troca/esteja_viva.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/variações_solicitações_de_troca/esteja_viva.css
@@ -162,6 +162,7 @@ button {
     background-color: var(--azul-500);
     border: none;
     border-radius: 4px;
+    cursor: pointer;
 }
 
 form input::placeholder {
