--- a/conteúdo/Projeto Interdisciplinar/paginas/variações_solicitações_de_troca/todos_garotos.css
+++ b/conteúdo/Projeto Interdisciplinar/paginas/variações_solicitações_de_troca/todos_garotos.css
@@ -107,7 +107,7 @@ img {
     font-size: 28px;
     color: var(--azul-700);
     font-weight: 500;
-    width: 550px;
+    width: 620px;
     height: 85px;
 }
 
@@ -162,6 +162,7 @@ button {
     background-color: var(--azul-500);
     border: none;
     border-radius: 4px;
+    cursor: pointer;
 }
 
 form input::placeholder {
