--- a/conteúdo/Projeto Interdisciplinar/style.css
+++ b/conteúdo/Projeto Interdisciplinar/style.css
@@ -1,174 +1,173 @@
 header {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-    background-color: var(--azul-700);
-    width: 100%;
-    height: 125px;
-    padding-top: 10px;
-    font-family: 'Poppins', monospace;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  background-color: var(--azul-700);
+  width: 100%;
+  height: 125px;
+  padding-top: 10px;
+  font-family: "Poppins", monospace;
 }
 
 header img {
-    width: 102px;
-    height: 100px;
+  width: 102px;
+  height: 100px;
 }
 
 header h1 {
-    font-size: 48px;
-    line-height: 40px;
-    color: var(--branco);
+  font-size: 48px;
+  line-height: 40px;
+  color: var(--branco);
 }
 
 .barra-de-pesquisa {
-    display: flex;
-    align-items: center;
-    padding: 0 16px 0 16px;
-    background-color: var(--azul-100);
-    border-radius: 50px;
-    box-shadow: 0px 1.5px 4px rgb(0, 0, 0, 0.6); 
-
+  display: flex;
+  align-items: center;
+  padding: 0 16px 0 16px;
+  background-color: var(--azul-100);
+  border-radius: 50px;
+  box-shadow: 0px 1.5px 4px rgb(0, 0, 0, 0.6);
 }
 
 .barra-de-pesquisa > img:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .barra-de-pesquisa > input {
-    display: flex;
-    align-items: center;
-    background-color: var(--azul-100);
-    width: 700px;
-    height: 55px;
-    border: none;
-    border-radius: 50px;
-    outline: none;
-    padding: 16px;
-    padding-top: 20px;
-    font-family: 'Poppins', monospace;
+  display: flex;
+  align-items: center;
+  background-color: var(--azul-100);
+  width: 700px;
+  height: 55px;
+  border: none;
+  border-radius: 50px;
+  outline: none;
+  padding: 16px;
+  padding-top: 20px;
+  font-family: "Poppins", monospace;
 }
 
-header .barra-de-pesquisa > input::placeholder  {
-    color: var(--azul-400);
-    font-family: 'Inter', serif;
-    font-size: 20px;
+header .barra-de-pesquisa > input::placeholder {
+  color: var(--azul-400);
+  font-family: "Inter", serif;
+  font-size: 20px;
 }
 
 header .barra-de-pesquisa img {
-    width: 24px;
-    height: 24px;
+  width: 24px;
+  height: 24px;
 }
 
 button {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 header .botoes {
-    display: flex;
-    justify-items: center;
-    align-items: center;
-    gap: 20px;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  gap: 20px;
 }
 
 header .botoes button {
-    background-color: var(--azul-100);
-    color: var(--azul-400);
-    border: solid 0px;
-    width: 150px;
-    height: 55px;
-    font-size: 16px;
-    border-radius: 3px;
+  background-color: var(--azul-100);
+  color: var(--azul-400);
+  border: solid 0px;
+  width: 150px;
+  height: 55px;
+  font-size: 16px;
+  border-radius: 3px;
 }
 
 .logo {
-    display: flex;
-    align-items: center;
-    gap: 16px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
 
 nav {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 50px;
-    background-color: var(--azul-100);
-    gap: 55px;
-    margin-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 50px;
+  background-color: var(--azul-100);
+  gap: 55px;
+  margin-top: 10px;
 }
 
 nav p {
-    font-family: 'Inter';
-    font-size: 20px;
-    color: var(--azul-400);
-    text-underline-offset: 16.5px;
+  font-family: "Inter";
+  font-size: 20px;
+  color: var(--azul-400);
+  text-underline-offset: 16.5px;
 }
 
 main {
-    display: flex;
+  display: flex;
 }
 
 section {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 90px 0 0 110px
+  display: flex;
+  flex-wrap: wrap;
+  margin: 90px 0 0 110px;
 }
 
 main section > h2 {
-    font-family: 'Poppins', monospace;
-    font-size: 36px;
-    font-weight: 600;
-    margin-bottom: 45px;
-    color: var(--azul-400);
+  font-family: "Poppins", monospace;
+  font-size: 36px;
+  font-weight: 600;
+  margin-bottom: 45px;
+  color: var(--azul-400);
 }
 
 main section h3 {
-    font-family: 'Poppins', monospace;
-    font-size: 28px;
-    font-weight: 500;
-    color: var(--azul-400);
-    width: 1300px;
-    text-decoration: underline;
-    margin: 7.5px 0 45px 20px;
+  font-family: "Poppins", monospace;
+  font-size: 28px;
+  font-weight: 500;
+  color: var(--azul-400);
+  width: 1300px;
+  text-decoration: underline;
+  margin: 7.5px 0 45px 20px;
 }
 
 .livros {
-    display: flex;
-    justify-content: center;
-    justify-content: space-between;
-    width: 1700px;
+  display: flex;
+  justify-content: center;
+  justify-content: space-between;
+  width: 1700px;
 }
 
 .livros > div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .livros div > img {
-    width: 255px;
-    height: 370px;
+  width: 255px;
+  height: 370px;
 }
 
 #button {
-    background-color: var(--azul-500);
-    color: var(--branco);
-    width: 222px;
-    height: 41px;
-    font-family: 'Poppins', monospace;
-    font-size: 20px;
-    border-radius: 3.5px;
-    margin-top: 24px;
-    margin-bottom: 50px;
+  background-color: var(--azul-500);
+  color: var(--branco);
+  width: 222px;
+  height: 41px;
+  font-family: "Poppins", monospace;
+  font-size: 20px;
+  border-radius: 3.5px;
+  margin-top: 24px;
+  margin-bottom: 50px;
 }
 
 .livros div button {
-    border: none;
-    width: 100%;
-    height: 100%;
-    background-color: var(--azul-500);
-    color: var(--branco);   
-    font-family: 'Poppins', monospace;
-    font-size: 20px;
+  border: none;
+  width: 100%;
+  height: 100%;
+  background-color: var(--azul-500);
+  color: var(--branco);
+  font-family: "Poppins", monospace;
+  font-size: 20px;
 }
